to make simple class